--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -590,6 +590,9 @@
     <ClCompile Include="Euler\1\1.cpp">
       <Filter>Euler\1</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\1200\1260.cpp">
+      <Filter>UVa\1200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
