--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -596,6 +596,15 @@
     <ClCompile Include="UVa\1100\1124.cpp">
       <Filter>UVa\1100</Filter>
     </ClCompile>
+    <ClCompile Include="Euler\1\3.cpp">
+      <Filter>Euler\1</Filter>
+    </ClCompile>
+    <ClCompile Include="Euler\1\15.cpp">
+      <Filter>Euler\1</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\800\895.cpp">
+      <Filter>UVa\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
