--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -605,6 +605,9 @@
     <ClCompile Include="UVa\800\895.cpp">
       <Filter>UVa\800</Filter>
     </ClCompile>
+    <ClCompile Include="Euler\1\6.cpp">
+      <Filter>Euler\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
