--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -596,6 +596,9 @@
     <ClCompile Include="UVa\10000\10071.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10300.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
