--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -599,6 +599,9 @@
     <ClCompile Include="UVa\10300\10300.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10370.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
