--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -605,6 +605,9 @@
     <ClCompile Include="UVa\800\821.cpp">
       <Filter>UVa\800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10082.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
