--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -617,6 +617,9 @@
     <ClCompile Include="UVa\10300\10327.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10041.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
