--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -620,6 +620,9 @@
     <ClCompile Include="UVa\10000\10041.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11500\11547.cpp">
+      <Filter>UVa\11500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
