--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -626,6 +626,9 @@
     <ClCompile Include="UVa\300\374.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10405.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
