--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -629,6 +629,9 @@
     <ClCompile Include="UVa\10400\10405.cpp">
       <Filter>UVa\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11364.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
