--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -632,6 +632,9 @@
     <ClCompile Include="UVa\11300\11364.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\136.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
