--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -638,6 +638,9 @@
     <ClCompile Include="Euler\1\29.cpp">
       <Filter>Euler\1</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\575.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
