--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -647,6 +647,9 @@
     <ClCompile Include="UVa\500\572.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\146.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
