--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -653,6 +653,9 @@
     <ClCompile Include="UVa\300\352.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\167.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
