--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -656,6 +656,9 @@
     <ClCompile Include="UVa\100\167.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10013.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
