--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -659,6 +659,15 @@
     <ClCompile Include="UVa\10000\10013.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1\1\4A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\1\1\1A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\1\70\71A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
