--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -668,6 +668,9 @@
     <ClCompile Include="Codeforces\1\70\71A.cpp">
       <Filter>Codeforces\1</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\150\158A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
